==> ojferro/NucleoFirmware/lib/MCP2515/mcp2515.cpp <==
#include "mcp2515.hpp"
#include <string.h> // For memset
#include <assert.h>
#define SPI_GPIO_PORT GPIOB
#define SPI_CS_PIN    GPIO_PIN_6

void MCP2515::startSPI() {
    HAL_GPIO_WritePin(SPI_GPIO_PORT, SPI_CS_PIN, GPIO_PIN_RESET);
}

void MCP2515::endSPI() {
    HAL_GPIO_WritePin(SPI_GPIO_PORT, SPI_CS_PIN, GPIO_PIN_SET);
}

MCP2515::ERROR MCP2515::reset(void)
{
    startSPI();
    transmitSPI(INSTRUCTION_RESET);
    endSPI();

    HAL_Delay(10);

    uint8_t zeros[14];
    memset(zeros, 0, sizeof(zeros));
    setRegisters(MCP_TXB0CTRL, zeros, 14);
    setRegisters(MCP_TXB1CTRL, zeros, 14);
    setRegisters(MCP_TXB2CTRL, zeros, 14);

    setRegister(MCP_RXB0CTRL, 0);
    setRegister(MCP_RXB1CTRL, 0);

    setRegister(MCP_CANINTE, CANINTF_RX0IF | CANINTF_RX1IF | CANINTF_ERRIF | CANINTF_MERRF);

    // Receives all valid messages using either Standard or Extended Identifiers that
    // Meet filter criteria. RXF0 is applied for RXB0, RXF1 is applied for RXB1
    modifyRegister(MCP_RXB0CTRL,
                   RXBnCTRL_RXM_MASK | RXB0CTRL_BUKT | RXB0CTRL_FILHIT_MASK,
                   RXBnCTRL_RXM_STDEXT | RXB0CTRL_BUKT | RXB0CTRL_FILHIT);
    modifyRegister(MCP_RXB1CTRL,
                   RXBnCTRL_RXM_MASK | RXB1CTRL_FILHIT_MASK,
                   RXBnCTRL_RXM_STDEXT | RXB1CTRL_FILHIT);

    // Clear filters and masks
    // Do not filter any standard frames for RXF0 used by RXB0
    // Do not filter any extended frames for RXF1 used by RXB1
    RXF filters[] = {RXF0, RXF1, RXF2, RXF3, RXF4, RXF5};
    for (int i=0; i<6; i++) {
        bool ext = (i == 1);
        ERROR result = setFilter(filters[i], ext, 0);
        if (result != ERROR_OK) {
            return result;
        }
    }

    MASK masks[] = {MASK0, MASK1};
    for (int i=0; i<2; i++) {
        ERROR result = setFilterMask(masks[i], true, 0);
        if (result != ERROR_OK) {
            return result;
        }
    }

    return ERROR_OK;
}

uint8_t MCP2515::readRegister(const REGISTER reg)
{
    startSPI();
    transmitSPI(INSTRUCTION_READ);
    transmitSPI(reg);

    uint8_t ret;
    receiveSPI(&ret);
    endSPI();

    return ret;
}

void MCP2515::readRegisters(const REGISTER reg, uint8_t values[], const uint8_t n)
{
    startSPI();
    transmitSPI(INSTRUCTION_READ);
    transmitSPI(reg);

    // mcp2515 has auto-increment of address-pointer, read back to back
    for (uint8_t i=0; i<n; i++) {
        receiveSPI(&values[i]);
    }
    endSPI();
}

uint8_t MCP2515::getStatus(void)
{
    startSPI();
    transmitSPI(INSTRUCTION_READ_STATUS);
    uint8_t status;
    receiveSPI(&status);
    endSPI();

    return status;
}

MCP2515::ERROR MCP2515::setMode(const CANCTRL_REQOP_MODE mode)
{
    modifyRegister(MCP_CANCTRL, CANCTRL_REQOP, mode);

    HAL_Delay(10);
    uint8_t newmode = readRegister(MCP_CANSTAT);
    newmode &= CANSTAT_OPMOD;
    
    bool modeMatch = newmode == mode;

    return modeMatch ? ERROR_OK : ERROR_FAIL;

}
