==> adamczykpiotr/pico-mcp2515/include/mcp2515/mcp2515.cpp <==
#include <cstring>
#include "mcp2515.h"

inline void MCP2515::startSPI() {
    asm volatile("nop \n nop \n nop");
    gpio_put(this->SPI_CS_PIN, 0);
    asm volatile("nop \n nop \n nop");
}

inline void MCP2515::endSPI() {
    asm volatile("nop \n nop \n nop");
    gpio_put(this->SPI_CS_PIN, 1);
    asm volatile("nop \n nop \n nop");
}

MCP2515::ERROR MCP2515::reset(void)
{
    startSPI();

    uint8_t instruction = INSTRUCTION_RESET;
    spi_write_blocking(this->SPI_CHANNEL, &instruction, 1);

    endSPI();

    //Depends on oscillator & capacitors used
    sleep_ms(10);

    uint8_t zeros[14];
    memset(zeros, 0, sizeof(zeros));
    setRegisters(MCP_TXB0CTRL, zeros, 14);
    setRegisters(MCP_TXB1CTRL, zeros, 14);
    setRegisters(MCP_TXB2CTRL, zeros, 14);

    setRegister(MCP_RXB0CTRL, 0);
    setRegister(MCP_RXB1CTRL, 0);

    setRegister(MCP_CANINTE, CANINTF_RX0IF | CANINTF_RX1IF | CANINTF_ERRIF | CANINTF_MERRF);

    // receives all valid messages using either Standard or Extended Identifiers that
    // meet filter criteria. RXF0 is applied for RXB0, RXF1 is applied for RXB1
    modifyRegister(MCP_RXB0CTRL,
                   RXBnCTRL_RXM_MASK | RXB0CTRL_BUKT | RXB0CTRL_FILHIT_MASK,
                   RXBnCTRL_RXM_STDEXT | RXB0CTRL_BUKT | RXB0CTRL_FILHIT);
    modifyRegister(MCP_RXB1CTRL,
                   RXBnCTRL_RXM_MASK | RXB1CTRL_FILHIT_MASK,
                   RXBnCTRL_RXM_STDEXT | RXB1CTRL_FILHIT);

    // clear filters and masks
    // do not filter any standard frames for RXF0 used by RXB0
    // do not filter any extended frames for RXF1 used by RXB1
    RXF filters[] = {RXF0, RXF1, RXF2, RXF3, RXF4, RXF5};
    for (int i=0; i<6; i++) {
        bool ext = (i == 1);
        ERROR result = setFilter(filters[i], ext, 0);
        if (result != ERROR_OK) {
            return result;
        }
    }

    MASK masks[] = {MASK0, MASK1};
    for (int i=0; i<2; i++) {
        ERROR result = setFilterMask(masks[i], true, 0);
        if (result != ERROR_OK) {
            return result;
        }
    }

    return ERROR_OK;
}

uint8_t MCP2515::readRegister(const REGISTER reg)
{
    startSPI();

    uint8_t data[2] = {
        INSTRUCTION_READ,
        reg
    };

    spi_write_blocking(this->SPI_CHANNEL, data, 2);

    uint8_t ret;
    spi_read_blocking(this->SPI_CHANNEL, 0x00, &ret, 1);

    endSPI();

    return ret;
}

void MCP2515::readRegisters(const REGISTER reg, uint8_t values[], const uint8_t n)
{
    startSPI();

    uint8_t data[2] = {
        INSTRUCTION_READ,
        reg
    };
    spi_write_blocking(this->SPI_CHANNEL, data, 2);

    spi_read_blocking(this->SPI_CHANNEL, 0x00, values, n);

    endSPI();
}

uint8_t MCP2515::getStatus(void)
{
    startSPI();

    uint8_t instruction = INSTRUCTION_READ_STATUS;
    spi_write_blocking(this->SPI_CHANNEL, &instruction, 1);

    uint8_t ret;
    spi_read_blocking(this->SPI_CHANNEL, 0x00, &ret, 1);

    endSPI();

    return ret;
}

MCP2515::ERROR MCP2515::setMode(const CANCTRL_REQOP_MODE mode)
{
    modifyRegister(MCP_CANCTRL, CANCTRL_REQOP, mode);

    unsigned long endTime = to_ms_since_boot(get_absolute_time()) + 10;
    bool modeMatch = false;
    while (to_ms_since_boot(get_absolute_time()) < endTime) {
        uint8_t newmode = readRegister(MCP_CANSTAT);
        newmode &= CANSTAT_OPMOD;

        modeMatch = newmode == mode;

        if (modeMatch) {
            break;
        }
    }

    return modeMatch 
        ? ERROR_OK
        : ERROR_FAIL;
}
